--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars Filmkatalog</title>
-    <link rel="stylesheet" href="../Star Wars/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="javescript.js"></script>
 </head>
 <body>
